@@ -1,9 +1,10 @@
 # 歷史更新 History Update
 
 * 20230503 Update
-  * 修復 LineBot query line id return錯誤
   * 修復 LineBot import錯誤
+  * 修復 LineBot query line id return錯誤
   * 調整 LineBot 正規化規則
+  * 調整 LineBot 狀態寫入log
 
 * 20230502 Update
   * 更新 個人不想看的廣告或網站
